# Estudos

./: README.md  requirements.txt
Estat/: Curso_de_Estatística_Parte_1.ipynb
Estat/aplicacao/: code.ipynb
Estat/parte 1/: Análise_Descritiva.ipynb  Curso_de_Estatística_Parte_1.ipynb
Estat/parte 1/proj final/: Análise_Descritiva.ipynb
Estat/parte 2/exercicio/: Estimativas.ipynb
Estat/parte 3/: Curso_de_Estatística_Parte_3.ipynb
Estat/parte 3/final/: Teste_de_Hipótese.ipynb
Estat/parte 4/: Curso_de_Estatística_Parte_4.ipynb
Introd/: code.ipynb
Langchain/: AcidenteServico.html  EstatutoMilitares.html  Lang_study.ipynb  chatbot.ipynb  chatbot.py  hugging_face.py  langchain_Code.ipynb  streamlit.py
Langchain/chatbot_pdf/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
Langchain/chatbot_pdf/.streamlit/: config.toml
Langchain/chatbot_pdf/chatbot_pdf/: etc.py  main.py
Pandas/: analise_alugies.ipynb
data science/Estudo de casos/: CE_1.1_por vb3 (1).html  CE_1.2_por vb3.html  CE_1.3_por vb3.html  CE_1.4_por vb3.html  CE_2.2_por vb.html  CE_2.3_por vb.html  CE_2.4_por vb.html  CE_2.5_por vb.html  CE_3_1_por vb (1).html  CE_3_2_por vb.html  CE_4.2_por vb.html  CE_4.3_por vb.html  CE_5.1_por vb.html  CE_5.2_por vb.html  CE_5.3_por vb.html  CE_6.2_por vb.html
mod1/: code.ipynb
